result/namespaces/err_5.xml.err
./test/namespaces/err_5.xml:1: error: Failed to parse QName 'f:a:'
<f:a: xmlns:f="http://example.com/foo"/>
    ^
